--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-w--PL/">W</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-p--PL/">P</a></button>
       <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-yellow--PL/">Y</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mrpenguin-dev.github.io/Simple-Bible-Verses-brown--PL/">B</a></button>
       <h1 class="section--h1">Jeremiasza 31:2-3 (UBG)</h1> 
       <p class="section--paragraph">2. Tak mówi PAN: Lud, który ocalał od miecza, znalazł łaskę na pustyni, gdy kroczyłem przed nim, aby dać odpoczynek Izraelowi.</p>
       <p class="section--paragraph section--bold">3. Powiedz: Dawno PAN mi się ukazał, mówiąc: Owszem, umiłowałem cię wieczną miłością, dlatego przyciągam cię swoim miłosierdziem.</p>
