--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-brown--PL/">B</a></button>
       <h1 class="section--h1">Jeremiasza 31:2-3 (UBG)</h1> 
       <p class="section--paragraph">2. Tak mówi PAN: Lud, który ocalał od miecza, znalazł łaskę na pustyni, gdy kroczyłem przed nim, aby dać odpoczynek Izraelowi.</p>
-      <p class="section--paragraph">3. // <span class="section--bold">Powiedz</span>: <span class="section--bold">Dawno PAN mi się ukazał</span>, <span class="section--bold">mówiąc</span>: <span class="section--bold">Owszem</span>, <span class="section--bold">umiłowałem cię wieczną miłością</span>, <span class="section--bold">dlatego przyciągam cię swoim miłosierdziem</span>.</p>
+      <p class="section--paragraph">3. <span class="section--bold">Powiedz</span>: <span class="section--bold">Dawno PAN mi się ukazał</span>, <span class="section--bold">mówiąc</span>: <span class="section--bold">Owszem</span>, <span class="section--bold">umiłowałem cię wieczną miłością</span>, <span class="section--bold">dlatego przyciągam cię swoim miłosierdziem</span>.</p>
     </section>
   </main>
 </body>
