--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 <body class="body">
   <main class="main">
     <section class="section">
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-pink--EN/">EN</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-pink--RU/">RU</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-pink--UA/">UA</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-b--PL/">B</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-r--PL/">R</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-o--PL/">O</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-g--PL/">Gr</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-grey--PL/">G</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-w--PL/">W</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-p--PL/">P</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-yellow--PL/">Y</a></button>
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Simple-Bible-Verses-brown--PL/">B</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-pink--EN/">EN</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-pink--RU/">RU</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-pink--UA/">UA</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-b--PL/">B</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-r--PL/">R</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-o--PL/">O</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-g--PL/">Gr</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-grey--PL/">G</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-w--PL/">W</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-p--PL/">P</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-yellow--PL/">Y</a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-brown--PL/">B</a></button>
       <h1 class="section--h1">Jeremiasza 31:2-3 (UBG)</h1> 
       <p class="section--paragraph">2. Tak mówi PAN: Lud, który ocalał od miecza, znalazł łaskę na pustyni, gdy kroczyłem przed nim, aby dać odpoczynek Izraelowi.</p>
       <p class="section--paragraph">3. <span class="section--bold">Powiedz</span>: <span class="section--bold">Dawno PAN mi się ukazał</span>, <span class="section--bold">mówiąc</span>: <span class="section--bold">Owszem</span>, <span class="section--bold">umiłowałem cię wieczną miłością</span>, <span class="section--bold">dlatego przyciągam cię swoim miłosierdziem</span>.</p>
